# crud_rust_rocket

./: .env  Cargo.toml  readme.md
src/: main.rs
src/db/: client.rs
src/models/: item.rs
src/routes/: create.rs  delete.rs  get_user.rs  mod.rs  update.rs
