[package]
name = "crud_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
mongodb = "2.0.0"  # Use the latest version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bson = "2.0"
dotenv = "0.15" 